force-app/main/default/objects/Contract_Renewal__c/Contract_Renewal__c.object-meta.xml
<CustomObject>
    <description>Controla o ciclo de renovação de contratos de clientes, com alertas de vencimento e probabilidade de renovação.</description>
    <label>Contract Renewal</label>
    <nameField>
        <label>Renewal Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Renewals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>