force-app/main/default/objects/Contract_Renewal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Renewals</relationshipLabel>
    <relationshipName>Contract_Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>