force-app/main/default/objects/Contract_Renewal__c/fields/New_Contract_End__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_End__c</fullName>
    <label>New Contract End</label>
    <type>Date</type>
</CustomField>