force-app/main/default/objects/Contract_Renewal__c/fields/Original_Contract_End__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_End__c</fullName>
    <label>Original Contract End</label>
    <type>Date</type>
</CustomField>