force-app/main/default/objects/Contract_Renewal__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Contract Renewals</relationshipLabel>
    <relationshipName>Contract_Renewals_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>