force-app/main/default/objects/Contract_Renewal__c/fields/Renewal_Probability__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Probability__c</fullName>
    <label>Renewal Probability</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>