force-app/main/default/objects/Contract_Renewal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
                <default>true</default>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>Em Negociação</fullName>
            </value>
            <value>
                <fullName>Renovado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>