force-app/main/default/objects/Contract_Renewal__c/validationRules/Contract_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_End_Date_Validation</fullName>
    <active>true</active>
    <description>Nova data de fim do contrato deve ser posterior à data original de fim.</description>
    <errorConditionFormula>NOT(ISBLANK(New_Contract_End__c)) &amp;&amp; NOT(ISBLANK(Original_Contract_End__c)) &amp;&amp; New_Contract_End__c &lt;= Original_Contract_End__c</errorConditionFormula>
    <errorMessage>A nova data de fim do contrato deve ser posterior à data original de término.</errorMessage>
</ValidationRule>